--- a/dsl/pom.xml
+++ b/dsl/pom.xml
@@ -110,6 +110,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.cloudifysource</groupId>
+			<artifactId>domain</artifactId>
+			<version>2.6.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
